--- a/index.html
+++ b/index.html
@@ -358,6 +358,14 @@
         }
 
         window.onload = loadTasks;
+
+        fetch('data.json')
+            .then(response => response.json())
+            .then(data => {
+                console.log(data);
+            })
+            .catch(error => console.error('Error loading JSON:', error));
+
     </script>
 </body>
 </html>
